--- a/src/main/webapp/common/composeMessage.xhtml
+++ b/src/main/webapp/common/composeMessage.xhtml
@@ -15,34 +15,37 @@ and open the template in the editor.
       xmlns:p="http://primefaces.org/ui">
 
     <h:head>
-        <title>Test</title>
+        <title>Compose Message</title>
         <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
 
 
     </h:head>
     <h:body >
+        <ui:composition template="../template/commonLayout.xhtml">
 
-        <h:form>
-            <p:panelGrid columns="2" >
-                <p:outputLabel value="type" />
-                <h:selectOneMenu value="#{composeMessageBean.userTypeId}" style="width:100%">
-                    <f:selectItems value="#{composeMessageBean.userTypes}" var="user" itemLabel="#{user.name}" itemValue="#{user.id}" />
-                   </h:selectOneMenu> 
-                   <p:outputLabel value="To"/>
-                   <p:inputText value="#{composeMessageBean.to}"/>
-                <p:outputLabel value="Subject"/>
-                <p:inputText value="#{composeMessageBean.subject}"/>
-                <p:outputLabel value="text"/>
-                <p:inputTextarea value="#{composeMessageBean.text}" cols="100" rows="20" />
-                <p:outputLabel value="upload"/>
-                <p:fileUpload/>
-                <f:facet name="footer">
-                    <div align="center" >
-                        <p:commandButton value="submit" ajax="false" action="#{composeMessageBean.go()}"/>
-                </div>
-                </f:facet>
-            </p:panelGrid>    
-        </h:form>
-
+            <ui:define name="content">
+                <h:form>
+                    <p:panelGrid columns="2" >
+                        <p:outputLabel value="type" />
+                        <h:selectOneMenu value="#{composeMessageBean.userTypeId}" style="width:100%">
+                            <f:selectItems value="#{composeMessageBean.userTypes}" var="user" itemLabel="#{user.name}" itemValue="#{user.id}" />
+                        </h:selectOneMenu> 
+                        <p:outputLabel value="To"/>
+                        <p:inputText value="#{composeMessageBean.to}"/>
+                        <p:outputLabel value="Subject"/>
+                        <p:inputText value="#{composeMessageBean.subject}"/>
+                        <p:outputLabel value="text"/>
+                        <p:inputTextarea value="#{composeMessageBean.text}" cols="100" rows="20" />
+                        <p:outputLabel value="upload"/>
+                        <p:fileUpload/>
+                        <f:facet name="footer">
+                            <div align="center" >
+                                <p:commandButton value="submit" ajax="false" action="#{composeMessageBean.go()}"/>
+                            </div>
+                        </f:facet>
+                    </p:panelGrid>    
+                </h:form>
+            </ui:define>
+        </ui:composition>
     </h:body>
 </html>
