Adding sent message

--- a/src/main/webapp/common/inbox.xhtml
+++ b/src/main/webapp/common/inbox.xhtml
@@ -25,10 +25,12 @@ and open the template in the editor.
 
             <ui:define name="content">
                 <h:form>
-                    <p:dataTable id="cand" value="#{messageBean.commonMessagelazy}" var="msg"  style="width: 90%;margin-bottom:20px" 
+                    <p:dataTable id="cand" value="#{messageBean.commonMessagelazy}" var="msg"  style="width: 900px;margin-bottom:20px" 
                                  emptyMessage="No Candidate found with given criteria" filteredValue="#{messageBean.commonMessageFiltered}" lazy="true" rows="5"
                                  paginatorTemplate="{RowsPerPageDropdown} {FirstPageLink} {PreviousPageLink} {CurrentPageReport} {NextPageLink} {LastPageLink}"
-                                 paginator="true"  rowsPerPageTemplate="5,10,15"  >
+                                 paginator="true"  rowsPerPageTemplate="5,10,15" 
+                                 selection="#{messageBean.selectedMessage}" selectionMode="single">
+                        <p:ajax event="rowSelect" listener="#{messageBean.onRowSelectNavigate}" /> 
 
 
                         <p:column headerText="sender">
